--- a/views/home.html
+++ b/views/home.html
@@ -18,10 +18,6 @@
                 <div id="logo">
                     <a href="/"><img src="./img/logo-mercado-liebre.svg"></a>
                 </div>
-                <div class="content-search">
-                    <input id="search-header" type="search" placeholder="Busca productos, marcas y más">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
                 <h2 class="text-header">
                     <i class="fa-solid fa-hand-holding-dollar"></i>
                     Compra en cuotas y sin tarjeta de crédito
@@ -32,15 +28,15 @@
             </a>
             <nav class="header-secondary">
                 <ul class="navbar-init">
-                    <li><a href=""></a>Ofertas</li>
-                    <li><a href=""></a>Tiendas oficiales</li>
-                    <li><a href=""></a>Vender</li>
-                    <li><a href=""></a>Ayuda</li>
+                    <li><a href="">Ofertas</a></li>
+                    <li><a href="">Tiendas oficiales</a></li>
+                    <li><a href="">Vender</a></li>
+                    <li><a href="">Ayuda</a></li>
                 </ul>
                 <ul class="navbar-end">
-                    <li><a href=""></a>Crea tu cuenta</li>
-                    <li><a href=""></a>Ingresa</li>
-                    <li><a href=""></a>Mis compras</li>
+                    <li><a href="">Crea tu cuenta <i class="fa-regular fa-address-card"></i></a></li>
+                    <li><a href="">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
+                    <li><a href="">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
                 </ul>
             </nav>   
         </header>
