--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -26,18 +26,6 @@ body{
     padding: 10px;
 }
 
-#search-header{
-    border: none
-
-}
-
-.content-search{
-    background-color: #ffffff;
-    width: 300px;
-    display: block;
-    
-}
-
 .text-header{
     text-align: center;
     font-weight: 400;
@@ -64,8 +52,217 @@ body{
 
 }
 
-
-
+.titular-ultima-visita {
+    color: #03264c;
+    font-size: 24px;
+    width: 100%;
+  }
+  
+  .gris {
+    color: #03264c;
+  }
+  
+  .titulares {
+    font-size: 24px;
+  }
+  
+  .precios {
+    font-size: 18px;
+    width: 70%;
+  }
+  
+  .descripciones {
+    font-size: 16px;
+  }
+  
+  .footer {
+    margin-top: 50px;
+    text-align: center;
+  }
+  
+  .banner {
+    width: 100%;
+  }
+  
+  .burger-menu {
+    font-size: 25px;
+    max-width: 10%;
+    display: block;
+    margin: auto;
+    text-align: center;
+    border-radius: 15%;
+    background-color: #1259c3;
+    color: #ebebeb;
+  }
+  
+  .footer-icon {
+    color: #1259c3;
+    font-size: 40px;
+  }
+  
+  .camion {
+    color: #39b54a;
+    position: relative;
+  }
+  
+  .camion i {
+    display: block;
+    font-size: 16px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #39b54a;
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    right: -25px;
+    top: -30px;
+    z-index: 10123;
+    transition: transform 200ms;
+  }
+  
+  .camion i:hover {
+    transform: rotate(-90deg);
+  }
+  
+  .promo {
+    color: #39b54a;
+    width: 30%;
+  }
+  
+  article {
+    background-color: white;
+    width: 100%;
+    padding: 10px;
+    margin: auto;
+    margin-bottom: 10px;
+    transition: box-shadow 500ms;
+  }
+  
+  article:hover {
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+  }
+  
+  .imagen-articulo {
+    display: block;
+    margin: auto;
+    width: 100%;
+  }
+  
+  main {
+    max-width: 100%;
+    padding: auto;
+    background-color: #ebebeb;
+    margin-top: 120px;
+  }
+  
+  .articulo {
+    border-top: solid 1px #ebebeb;
+    padding: 15px;
+  }
+  
+  .productos {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  
+  .logo-browse {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    margin: auto;
+    width: 100%;
+  }
+  
+  .precio-promo {
+    display: flex;
+  }
+  
+  .listas {
+    display: none;
+  }
+  
+  .metodos-pago {
+    width: 50%;
+  }
+  
+  .descripciones {
+    opacity: 0;
+    transition: opacity 300ms;
+  }
+  
+  .descripciones:hover {
+    opacity: 1;
+  }
+  
+  .footer-ul {
+    display: flex;
+    width: 100%;
+  }
+  
+  .footer-icon i:hover {
+    color: green;
+  }
+  
+  .footer div {
+    margin-top: 20px;
+    font-weight: 600;
+  }
+  
+  /*Formularios*/
+  
+  .formulario {
+    margin-top: 200px;
+  }
+  
+  @media (min-width: 361px) {
+    article {
+      width: 45%;
+    }
+  
+    .listas {
+      display: flex;
+    }
+  
+    .listas-left {
+      display: flex;
+      width: 80%;
+    }
+  
+    .listas-left li {
+      margin-right: 15px;
+    }
+  
+    .listas-right {
+      display: flex;
+      width: 80%;
+      justify-content: end;
+    }
+  
+    .listas-right li {
+      margin-right: 15px;
+    }
+  
+    .burger-menu {
+      display: none;
+    }
+  
+    .logo {
+      width: 20%;
+    }
+  
+    .search {
+      width: 20%;
+    }
+    .metodos-pago {
+      width: 20%;
+    }
+  }
+  
+  
 @media (min-width: 768px) {
     .header-principal{
         display: flex;
@@ -101,8 +298,45 @@ body{
         margin: 5px;
     }
 
-}
+    article {
+        width: 22%;
+    }
+    
+    
+    .create-form {
+      margin: 15px;
+      padding: 15px;
+    }
+    
+    .manejar-formulario {
+      margin-bottom: 20px;
+    }
+    
+    .manejar-formulario label {
+      font-style: italic;
+      margin-bottom: 5px;
+      display: block;
+    }
+    
+    .manejar-inputs {
+      width: 100%;
+    }
+    
+    .boton-formulario {
+      border: solid 1px white;
+      font-size: 20px;
+      background-color: green;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 10%;
+    }
+    
+    .boton-formulario:hover {
+      background-color: darkgreen;
+      border: solid 1px black;
+    }
 
+}
 
 @media (min-width: 1280px){
     .header-principal, .header-secondary {
