--- a/views/home.html
+++ b/views/home.html
@@ -34,15 +34,180 @@
                     <li><a href="">Ayuda</a></li>
                 </ul>
                 <ul class="navbar-end">
-                    <li><a href="">Crea tu cuenta <i class="fa-regular fa-address-card"></i></a></li>
-                    <li><a href="">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
-                    <li><a href="">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
+                    <li><a href="./register">Crea tu cuenta <i class="fa-regular fa-address-card"></i></a></li>
+                    <li><a href="./login">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
+                    <li><a href="/">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
                 </ul>
             </nav>   
         </header>
-        <section>
-            
-        </section>
+        <main>
+            <section >
+                <img class="banner" src="/img/img-home-banner.jpg" >
+            </section>
+            <strong class="titular-ultima-visita">Basado en tu última visita</strong>
+            <div class="productos">
+            <article>
+                <img class="imagen-articulo" src="/img/img-cafetera-moulinex.jpg" alt="cafetera moulinex" width="300 px">
+                <div class="articulo">
+                    <div class="camion">            <i class="fas fa-truck"></i>            </div>
+                    <div class="precio-promo">
+                    <div class="precios">$6.770</div>
+                    <div class="promo">40% OFF</div>
+                    </div>
+                    <span class="span-descripciones">
+                    <strong class="descripciones" class="descripcion-producto">Cafetera Moulinex</strong>
+                    </span>
+                </div>
+            </article>
+            <article>
+                <img class="imagen-articulo" src="/img/img-macbook-pro-2019.jpg" alt="macbook pro" width="300 px">
+                <div class="articulo">
+                    <div class="camion">            <i class="fas fa-truck"></i>            </div>
+                    <div class="precio-promo">
+                    <div class="precios">$230.000</div>
+                    <div class="promo">20% OFF</div>
+                    </div>
+                    <strong class="descripciones" class="descripcion-producto">Macbook Pro 2019</strong>
+                </div>
+            </article>
+            <article>
+                <img class="imagen-articulo" src="/img/img-samsung-galaxy-s10.jpg" alt="samsung galaxy s10" width="300 px">
+                <div class="articulo">
+                    <div class="camion">            <i class="fas fa-truck"></i>            </div>
+                    <div class="precio-promo">
+                    <div class="precios">$70.500</div>
+                    <div class="promo">10% OFF</div>
+                    </div>
+                    <strong class="descripciones" class="descripcion-producto">Samsung Galaxy S10</strong>
+                </div>
+            </article>
+            <article>
+                <img class="imagen-articulo" src="/img/img-tv-samsung-smart.jpg" alt="smart TV Samsung" width="300 px">
+                <div class="articulo">
+                    <div class="camion">            <i class="fas fa-truck"></i>            </div>
+                    <div class="precio-promo">
+                    <div class="precios">$23.200</div>
+                    <div class="promo">5% OFF</div>
+                    </div>
+                    <strong class="descripciones" class="descripcion-producto">Smart Tv Samsung 43''</strong>
+                </div>
+            </article>
+            </div>
+            <strong class="titular-ultima-visita">Ofertas</strong>
+        
+            <div class="productos">
+            <article>
+                <img class="imagen-articulo" src="/img/img-cafetera-moulinex.jpg" alt="cafetera moulinex" width="300 px">
+                <div class="articulo">
+                    <div class="camion">            <i class="fas fa-truck"></i>            </div>
+                    <div class="precio-promo">
+                        <div class="precios">$6.770</div>
+                    <div class="promo">40% OFF</div>
+                    </div>
+                </span>
+                    <strong class="descripciones" class="descripcion-producto">Cafetera Moulinex</strong>
+                </div>
+            </article>
+            <article>
+                <img class="imagen-articulo" src="/img/img-macbook-pro-2019.jpg" alt="macbook pro" width="300 px">
+                <div class="articulo">
+                    <div class="camion">            <i class="fas fa-truck"></i>            </div>
+                    <div class="precio-promo">
+                    <div class="precios">$230.000</div>
+                    <div class="promo">20% OFF</div>
+                    </div>
+                    <strong class="descripciones" class="descripcion-producto">Macbook Pro 2019</strong>
+                </div>
+            </article>
+            <article>
+                <img class="imagen-articulo" src="/img/img-samsung-galaxy-s10.jpg" alt="samsung galaxy s10" width="300 px">
+                <div class="articulo">
+                    <div class="camion">            <i class="fas fa-truck"></i>            </div>
+                    <div class="precio-promo">
+                    <div class="precios">$70.500</div>
+                    <div class="promo">10% OFF</div>
+                    </div>
+                    <strong class="descripciones" class="descripcion-producto">Samsung Galaxy S10</strong>
+                </div>
+            </article>
+            <article>
+                <img class="imagen-articulo" src="/img/img-tv-samsung-smart.jpg" alt="smart TV Samsung" width="300 px">
+                <div class="articulo">
+                    <div class="camion">            <i class="fas fa-truck"></i>            </div>
+                    <div class="precio-promo">
+                    <div class="precios">$23.200</div>
+                    <div class="promo">5% OFF</div>
+                    </div>
+                    <strong class="descripciones" class="descripcion-producto">Smart Tv Samsung 43''</strong>
+                </div>
+            </article>
+            </div>
+        </main>
+        
+        <footer class="footer" class="gris">
+        
+        <ul style="list-style-type: none" class="footer-ul">
+            <li>
+                <div class="footer-icon"><i class="fas fa-credit-card"></i></div>
+                <strong class="titulares">Pagá con tarjeta o efectivo</strong>
+                <div class="descripciones">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos de pago. ¡Y siempre es seguro!</div>
+            </li>
+            <br>
+            <li>
+                <div class="footer-icon"><i class="fas fa-gift"></i></div>
+                <strong class="titulares">Envío gratis desde $ 2.500</strong>
+                <div class="descripciones">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.</div>
+            </li>
+            <br>
+            <li>
+                <div class="footer-icon"><i class="fas fa-user-shield"></i></div>
+                <strong class="titulares">Seguridad, de principio a fin</strong>
+                <div class="descripciones">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.</div>
+            </li>
+            <br>
+            <li>
+            </li>
+         
+        </ul>
+        <div>Copyright © 1999-2020 MercadoLiebre S.R.L.</div>
+        </footer>
+        
+        <!-- formulario -->
+        
+        <form action="/crear-producto" method="" class="">
+            <div class="manejar-formulario">
+                <label>Nombre del producto</label>
+                <input type="text" name="nombre" class="manejar-inputs">
+            </div>
+            <div class="manejar-formulario">
+                <label>Precio</label>
+                <input type="number" name="precio" placeholder="" class="manejar-inputs">
+            </div>
+            <div class="manejar-formulario"> 
+                <label>Categoría</label>
+                <select name="categoria" class="manejar-inputs">
+                    <option value="hogar">Hogar</option>
+                    <option value="electro">Electrodomesticos</option>
+                    <option value="indumentaria">Indumentaria</option>
+                </select>
+            </div>
+            <div  class="manejar-formulario">
+                <label>Descripción del producto</label>
+                <textarea class="manejar-inputs"></textarea>
+            </div>
+            <div  class="manejar-formulario">
+                <label>Está en oferta?</label>
+                <input type="radio" name="en-oferta">
+            </div>
+            <button type="submit" class="boton-formulario">Enviar</button>
+            <button type="reset" class="boton-formulario">Borrar</button>
+        
+        </form>
+        </body>
+        </html> 
     </Container> 
 </body>
 </html>
